Changes towards version 0.6:
- Input templates can now be renamed, both online and off - Michael
- Fixed an integer-size error that was causing crashes on AMD64, from 
  Solomon Peachy (#895) - Michael
- Added some generic lib code to be used by future code. - SvdB
- Joystick support is now optional; from SvdB, Alex
- Restructed and normalized savegame and game-state reading/writing code;
  savegames are now compatible between same-endian 32- and 64-bit systems;
  savegames from prior 64-bit builds cannot be used - Alex
- (Unix build scripts) Failed mkdep doesn't result in empty .d files
  anymore. Now using the gcc 3 "-MF" and "-MT" options. - SvdB
- removed internal libmikmod, adding a dependancy on an external one - SvdB
- Added a quit button for the Super Melee main menu - Michael
- Fixed sporadic uqm.cfg loading errors in release builds - Alex
- Quit (F10) now works correctly during intro (bug #862) - Alex
- Playing failure sounds when entering text consistently (bug #884) - Alex
- 64-bit fixes in construct_response () - Michael
- Removed rotating 3d planet frame caching (cuts mem usage by 5M) - Alex
- One pixel fix in melee menu pictures. - SvdB
- Debugging function to add energy during battle. - SvdB
- Changed slaveshield throb rate to match the 3DO - SvdB
- Fixed recently introduced bug with crew count on exit to HyperSpace.
  (bug #875) - SvdB
- Fixed static vars not reinited in alien comm code (caused various
  side-effects; bug #870) - Alex
- Fixed a spinlock in Melee's final score screen (Bug 879) - Michael
- Phase 2 of online keyconfig - Setup Menu can configure assignment of 
  templates to players - Michael
- Control scheme shifted to Menus + Control Templates in preparation for 
  the online keyconfig - Michael
- Fixes to logic in the Utwig conversations (Bugs 327, 647), from Nic 
  and Michael
- Removed unused and invalid lander font chars - Alex
- Setup menu reads strings out of lbm/setupmenu.txt - Michael