@@ -30,11 +30,6 @@ Menu-Select: key Return
 Menu-Select: key RightControl
 Menu-Cancel: key Space
 Menu-Cancel: key RightShift
-Menu-Delete: key Delete
-Menu-Backspace: key Backspace
-Menu-Edit-Cancel: key Escape
-Menu-Search: key /
-Menu-Next: key Tab
 
 # ... and the number pad.  Note that zoom controls on the starmap are
 # different from the paging controls in Super Melee.
@@ -52,18 +47,28 @@ Menu-Select: key Keypad-Enter
 Menu-Cancel: key Keypad-0
 Menu-Delete: key Keypad-.
 
-# Player 1's flight controls.  This is the bottom player in Super
-# Melee and the player in the full game.  Again, the player has the
-# option of using either the number pad or the arrow keys.
+# System utility keys.
+Menu-Delete: key Delete
+Menu-Backspace: key Backspace
+Menu-Edit-Cancel: key Escape
+Menu-Search: key /
+Menu-Next: key Tab
+Pause: key Pause
+Pause: key F1
+Exit: key F10
+
+
+
+# Arrow-key controls.  This is the default for the bottom player in
+# Super Melee and the player in the full game.  Again, the player has
+# the option of using either the number pad or the arrow keys.
 
 Keyboard-1-Up: key Up
 Keyboard-1-Down: key Down
 Keyboard-1-Left: key Left
 Keyboard-1-Right: key Right
-Keyboard-1-Weapon: key Return
 Keyboard-1-Weapon: key RightControl
 Keyboard-1-Special: key RightShift
-Keyboard-1-Escape: key Escape
 
 Keyboard-1-Up: key Keypad-8
 Keyboard-1-Down: key Keypad-2
@@ -72,23 +77,43 @@ Keyboard-1-Right: key Keypad-6
 Keyboard-1-Weapon: key Keypad-Enter
 Keyboard-1-Special: key Keypad-0
 
-Keyboard-1-Weapon: key ]
-Keyboard-1-Special: key [
+Keyboard-1-Escape: key Escape
 
-# Player 2's flight controls.  We add the key 'd' to let him
-# move down in the super-melee ship selection.
-Keyboard-2-Up: key e
-Keyboard-2-Down: key d
-Keyboard-2-Left: key s
-Keyboard-2-Right: key f
-Keyboard-2-Weapon: key q
-Keyboard-2-Special: key a
+# WASD for Player 2's default flight controls.  We add the key 'd' to
+# let him move down in the super-melee ship selection.
+
+Keyboard-2-Up: key w
+Keyboard-2-Down: key s
+Keyboard-2-Left: key a
+Keyboard-2-Right: key d
+Keyboard-2-Weapon: key v
+Keyboard-2-Special: key b
 Keyboard-2-Escape: key Escape
 
-# System utility keys.
-Pause: key Pause
-Pause: key F1
-Exit: key F10
+# Control Scheme 3: Variant Arrow keys with brackets for firing.
+
+Keyboard-3-Up: key Keypad-8
+Keyboard-3-Down: key Keypad-2
+Keyboard-3-Left: key Keypad-4
+Keyboard-3-Right: key Keypad-6
+Keyboard-3-Up: key Up
+Keyboard-3-Down: key Down
+Keyboard-3-Left: key Left
+Keyboard-3-Right: key Right
+Keyboard-3-Weapon: key ]
+Keyboard-3-Special: key [
+Keyboard-3-Escape: key Escape
+
+
+# Control Scheme 4: Shifted WASD keys.
+
+Joystick-1-Up: key e
+Joystick-1-Down: key d
+Joystick-1-Left: key s
+Joystick-1-Right: key f
+Joystick-1-Weapon: key q
+Joystick-1-Special: key a
+Joystick-1-Escape: key Escape
 
 # This is a sample joystick configuration.  This is intended to work
 # primarily under WinXP with a USB analog/digital gamepad.  The
@@ -100,19 +125,19 @@ Exit: key F10
 
 joystick 0 threshold 10000   # How far to move before it counts; 0-30000
 
-Joystick-1-Up: joystick 0 axis 1 negative
-Joystick-1-Down: joystick 0 axis 1 positive
-Joystick-1-Left: joystick 0 axis 0 negative
-Joystick-1-Right: joystick 0 axis 0 positive
+Joystick-2-Up: joystick 0 axis 1 negative
+Joystick-2-Down: joystick 0 axis 1 positive
+Joystick-2-Left: joystick 0 axis 0 negative
+Joystick-2-Right: joystick 0 axis 0 positive
 
-Joystick-1-Up: joystick 0 hat 0 up
-Joystick-1-Down: joystick 0 hat 0 down
-Joystick-1-Left: joystick 0 hat 0 left
-Joystick-1-Right: joystick 0 hat 0 right
+Joystick-2-Up: joystick 0 hat 0 up
+Joystick-2-Down: joystick 0 hat 0 down
+Joystick-2-Left: joystick 0 hat 0 left
+Joystick-2-Right: joystick 0 hat 0 right
 
-Joystick-1-Weapon: joystick 0 button 1
-Joystick-1-Special: joystick 0 button 0
-Joystick-1-Escape: joystick 0 button 6
+Joystick-2-Weapon: joystick 0 button 1
+Joystick-2-Special: joystick 0 button 0
+Joystick-2-Escape: joystick 0 button 6
 
 Menu-Up: joystick 0 axis 1 negative
 Menu-Down: joystick 0 axis 1 positive
@@ -133,19 +158,19 @@ Menu-Zoom-Out: joystick 0 button 7
 
 joystick 1 threshold 10000   # How far to move before it counts; 0-30000
 
-Joystick-2-Up: joystick 1 axis 1 negative
-Joystick-2-Down: joystick 1 axis 1 positive
-Joystick-2-Left: joystick 1 axis 0 negative
-Joystick-2-Right: joystick 1 axis 0 positive
+Joystick-3-Up: joystick 1 axis 1 negative
+Joystick-3-Down: joystick 1 axis 1 positive
+Joystick-3-Left: joystick 1 axis 0 negative
+Joystick-3-Right: joystick 1 axis 0 positive
 
-Joystick-2-Up: joystick 1 hat 0 up
-Joystick-2-Down: joystick 1 hat 0 down
-Joystick-2-Left: joystick 1 hat 0 left
-Joystick-2-Right: joystick 1 hat 0 right
+Joystick-3-Up: joystick 1 hat 0 up
+Joystick-3-Down: joystick 1 hat 0 down
+Joystick-3-Left: joystick 1 hat 0 left
+Joystick-3-Right: joystick 1 hat 0 right
 
-Joystick-2-Weapon: joystick 1 button 1
-Joystick-2-Special: joystick 1 button 0
-Joystick-2-Escape: joystick 1 button 6
+Joystick-3-Weapon: joystick 1 button 1
+Joystick-3-Special: joystick 1 button 0
+Joystick-3-Escape: joystick 1 button 6
 
 Menu-Up: joystick 1 axis 1 negative
 Menu-Down: joystick 1 axis 1 positive
@@ -163,37 +188,3 @@ Menu-Page-Up: joystick 1 button 4
 Menu-Page-Down: joystick 1 button 5
 Menu-Zoom-In: joystick 1 button 6
 Menu-Zoom-Out: joystick 1 button 7
-
-joystick 2 threshold 10000   # How far to move before it counts; 0-30000
-
-Joystick-3-Up: joystick 2 axis 1 negative
-Joystick-3-Down: joystick 2 axis 1 positive
-Joystick-3-Left: joystick 2 axis 0 negative
-Joystick-3-Right: joystick 2 axis 0 positive
-
-Joystick-3-Up: joystick 2 hat 0 up
-Joystick-3-Down: joystick 2 hat 0 down
-Joystick-3-Left: joystick 2 hat 0 left
-Joystick-3-Right: joystick 2 hat 0 right
-
-Joystick-3-Weapon: joystick 2 button 1
-Joystick-3-Special: joystick 2 button 0
-Joystick-3-Escape: joystick 2 button 6
-
-Menu-Up: joystick 2 axis 1 negative
-Menu-Down: joystick 2 axis 1 positive
-Menu-Left: joystick 2 axis 0 negative
-Menu-Right: joystick 2 axis 0 positive
-
-Menu-Up: joystick 2 hat 0 up
-Menu-Down: joystick 2 hat 0 down
-Menu-Left: joystick 2 hat 0 left
-Menu-Right: joystick 2 hat 0 right
-
-Menu-Cancel: joystick 2 button 0
-Menu-Select: joystick 2 button 1
-Menu-Page-Up: joystick 2 button 4
-Menu-Page-Down: joystick 2 button 5
-Menu-Zoom-In: joystick 2 button 6
-Menu-Zoom-Out: joystick 2 button 7
-
